bridge/base/0-nomi-namespace.yaml
#! 0-nomi-namespace.yaml
# Generated code, do not edit
apiVersion: v1
kind: Namespace
metadata:
    name: nomi
    labels:
        com.docker.compose.project: nomi
