bridge/base/db-deployment.yaml
#! db-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: db
    namespace: nomi
    labels:
        com.docker.compose.project: nomi
        com.docker.compose.service: db
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: nomi
            com.docker.compose.service: db
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: nomi
                com.docker.compose.service: db
                com.docker.compose.network.library_network: "true"
        spec:
            containers:
                - name: postgres-db
                  image: postgres:13
                  imagePullPolicy: IfNotPresent
                  ports:
                    - name: db-5432
                      containerPort: 5432
