bridge/base/inventory_management-expose.yaml
#! inventory_management-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: inventory-management
    namespace: nomi
    labels:
        com.docker.compose.project: nomi
        com.docker.compose.service: inventory_management
spec:
    selector:
        com.docker.compose.project: nomi
        com.docker.compose.service: inventory_management
    ports:
        - name: inventory--8081
          port: 8081
          targetPort: inventory--8081
