bridge/base/library_network-network-policy.yaml
#! library_network-network-policy.yaml
# Generated code, do not edit
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    name: library-network-network-policy
    namespace: nomi
spec:
    podSelector:
        matchLabels:
            com.docker.compose.network.library_network: "true"
    policyTypes:
        - Ingress
        - Egress
    ingress:
        - from:
            - podSelector:
                matchLabels:
                    com.docker.compose.network.library_network: "true"
    egress:
        - to:
            - podSelector:
                matchLabels:
                    com.docker.compose.network.library_network: "true"
